fix shifting scrollbar

--- a/TheVolSkew/war/stylesheets/volskew.css
+++ b/TheVolSkew/war/stylesheets/volskew.css
@@ -4,7 +4,10 @@
  *LAYOUT 
  *
  */
-
+body {
+	overflow-x:hidden;
+	overflow-y: scroll;
+}
 #header {
 	width: 100%;
 }
